--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Explore Unreal City – a hub for web development and design tips. Learn HTML, CSS, JavaScript, and more.">
     <meta name="theme-color" content="#ffffff">
     <title>Alarm Clock</title>
+    <link rel="icon" href="./src/img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
